--- a/GraduatioProject_Android/app/src/main/AndroidManifest.xml
+++ b/GraduatioProject_Android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginAndRegister.LoginActivity"></activity>
+        <activity android:name=".LoginAndRegister.RegisterActivity"></activity>
+        <activity android:name=".LoginAndRegister.LoginActivity" />
         <activity android:name=".LoginAndRegister.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
