--- a/GraduatioProject_Android/app/src/main/AndroidManifest.xml
+++ b/GraduatioProject_Android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginAndRegister.RegisterActivity"></activity>
+        <activity android:name=".FragmentHome.HomeFragment"></activity>
+        <activity android:name=".tools.FragmentManager" />
+        <activity android:name=".LoginAndRegister.RegisterActivity" />
         <activity android:name=".LoginAndRegister.LoginActivity" />
         <activity android:name=".LoginAndRegister.MainActivity">
             <intent-filter>
