--- a/GraduatioProject_Android/app/src/main/AndroidManifest.xml
+++ b/GraduatioProject_Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.graduatioproject_android">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -9,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FragmentHome.HomeFragment"></activity>
+        <activity android:name=".FragmentMy.HeadActivity"></activity>
+        <activity android:name=".FragmentHome.HomeFragment" />
         <activity android:name=".tools.FragmentManager" />
         <activity android:name=".LoginAndRegister.RegisterActivity" />
         <activity android:name=".LoginAndRegister.LoginActivity" />
