--- a/GraduatioProject_Android/app/src/main/AndroidManifest.xml
+++ b/GraduatioProject_Android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FragmentMy.ThemeActivity"></activity>
+        <activity android:name=".FragmentMy.InformActivity"></activity>
+        <activity android:name=".FragmentMy.VoiceActivity" />
+        <activity android:name=".FragmentMy.ThemeActivity" />
         <activity android:name=".FragmentMy.HeadActivity" />
         <activity android:name=".FragmentHome.FragmentHome" />
         <activity android:name=".tools.FragmentManager" />
