--- a/GraduationProject_Android/app/src/main/AndroidManifest.xml
+++ b/GraduationProject_Android/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".FragmentMy.SetCEActivity"></activity>
         <activity android:name=".FragmentControl.MonitorFull" />
         <activity android:name=".FragmentControl.MonitorControlActivity" />
         <activity android:name=".FragmentControl.VoiceControlActivity" />
         <activity android:name=".FragmentOutdoor.OutdoorActivity" />
-        <activity android:name=".FragmentMy.SectionActivity" />
         <activity android:name=".FragmentMy.InformActivity" />
         <activity android:name=".FragmentMy.VoiceActivity" />
         <activity android:name=".FragmentMy.ThemeActivity" />
